# idea-engine

./: .env.example  .gitignore  Cargo.toml  DEPENDENCIES.md  DEPLOY.md  OUTPUT.md  README.md  RUNBOOK.md  eslint.config.js  netlify.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml
.github/workflows/: ci.yml  release.yml
apps/api/: package.json  render.yaml  server.js
apps/desktop/: .env.production.example  eslint.config.js  index.html  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
apps/desktop/src/: App.css  App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md  icon.icns
apps/desktop/src-tauri/src/: ipc.rs  lib.rs  main.rs
apps/desktop/src/components/: ChatTimeline.css  ChatTimeline.tsx  IdeaCard.css  IdeaCard.tsx  ModelSelector.css  ModelSelector.tsx  Settings.css  Settings.tsx  TemplateSidebar.css  TemplateSidebar.tsx
apps/desktop/src/hooks/: useApiContext.ts
apps/desktop/src/services/: api.ts
apps/desktop/src/store/: chatStore.ts
crates/core/: Cargo.toml
crates/core/src/: eval.rs  lib.rs  orchestrator.rs  ranker.rs  schema.rs  storage.rs
crates/core/src/adapters/: anthropic.rs  gemini.rs  mod.rs  openai.rs
scripts/: create-icon.js  gen-icon.js
