[package]
name = "idea-engine-core"
version = "0.1.0"
edition = "2021"
description = "Idea Engine domain logic - orchestration, adapters, ranker"
license = "MIT OR Apache-2.0"

[[bin]]
name = "eval"
path = "src/bin/eval.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4", "serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
keyring = "2.0"
async-trait = "0.1"
