[package]
name = "idea-engine-desktop"
version = "0.1.0"

[lib]
name = "idea_engine_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
description = "Idea Engine - Cross-platform desktop app"
edition = "2021"
license = "MIT OR Apache-2.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
idea-engine-core = { path = "../../../crates/core" }
keyring = "2.0"
uuid = { version = "1", features = ["v4"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
